Update elixir.yml config

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -19,6 +19,8 @@ jobs:
 
     name: Build and test
     runs-on: ubuntu-latest
+    env:
+      ImageOS: ubuntu24
 
     steps:
     - uses: actions/checkout@v4
